Give user the option to continue editing filters after being warned they are invalid. Addresses usability complaint in bug 196352.

BUG: 196352

svn path=/trunk/KDE/kdepim/; revision=986219